--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <i class="fab fa-python"></i>
             <h2>Diabetes Prediction</h2>
             <p>build using python</p>
-            <button><a href="#" target="blank">View source <i
+            <button><a href="https://github.com/srikar20031/OIBSIP/tree/main/oasisintern" target="blank">View source <i
               class="fas fa-external-link-alt"></i></a>
             </button>
             <button><a href="#" target="blank">Try it Live <i
