--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div>
            <h1 class="about-heading">About Me</h1>
           </div> 
-          <img src="C:\Users\HP\Desktop\personal folio\profile.jpeg" alt="image" />
+          <img src="./img/profile.jpeg" alt="Profile Image" />
           <p>
             I am 20 year old, a final year Computer Science Engineering student.
             I really enjoy solving problems as well as making things pretty and easy to use.
