--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div>
            <h1 class="about-heading">About Me</h1>
           </div> 
-          <img src="./img/profile.jpeg" alt="Profile Image" />
+          <img src="https://www.vecteezy.com/vector-art/9749751-avatar-man-icon-cartoon-male-profile-mascot-vector-illustration-head-face-business-user-logo" alt="Profile Image" />
           <p>
             I am 20 year old, a final year Computer Science Engineering student.
             I really enjoy solving problems as well as making things pretty and easy to use.
