--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div>
            <h1 class="about-heading">About Me</h1>
           </div> 
-          <img src="https://www.vecteezy.com/vector-art/9749751-avatar-man-icon-cartoon-male-profile-mascot-vector-illustration-head-face-business-user-logo" alt="Profile Image" />
+          <img src="https://img.freepik.com/premium-vector/young-smiling-man-adam-avatar-3d-vector-people-character-illustration-cartoon-minimal-style_365941-687.jpg?w=740" alt="Profile Image" />
           <p>
             I am 20 year old, a final year Computer Science Engineering student.
             I really enjoy solving problems as well as making things pretty and easy to use.
