--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <img src="https://img.freepik.com/premium-vector/young-smiling-man-adam-avatar-3d-vector-people-character-illustration-cartoon-minimal-style_365941-687.jpg?w=740" alt="Profile Image" />
           <p>
             I am 20 year old, a final year Computer Science Engineering student.
-            I really enjoy solving problems as well as making things pretty and easy to use.
+            I really enjoy solving problems as well as making things easy to use.
           </p>
           <div class="work-arrow">
             <p>
