--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <button><a href="#" target="blank">View source <i
               class="fas fa-external-link-alt"></i></a>
             </button>
-            <button><a href="https://github.com/srikar20031/OIBSIP/tree/main/oasisintern" target="blank">Try it Live <i
+            <button><a href="" target="blank">Try it Live <i
               class="fas fa-external-link-alt"></i></a>
           </button>
           </div>
@@ -143,7 +143,7 @@
             <i class="fab fa-java"></i>
             <h2>atm interface</h2>
             <p>Build using java</p>
-            <button><a href="#" target="blank">View source <i
+            <button><a href="https://github.com/srikar20031/OIBSIP/tree/main/oasisintern" target="blank">View source <i
               class="fas fa-external-link-alt"></i></a>
             </button>
             <button><a href="#" target="blank">Try it Live <i
