--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div>
            <h1 class="about-heading">About Me</h1>
           </div> 
-          <img src="https://img.freepik.com/premium-vector/young-smiling-man-adam-avatar-3d-vector-people-character-illustration-cartoon-minimal-style_365941-687.jpg?w=740" alt="Profile Image" />
+          <img src="https://img.freepik.com/free-vector/head-man_1308-33466.jpg?w=740&t=st=1700283564~exp=1700284164~hmac=cbd9cc4d45a54640c7aadeff817393a3fe899a1fe8539c801465a54e7aefc75f" alt="Profile Image" />
           <p>
             I am 20 year old, a final year Computer Science Engineering student.
             I really enjoy solving problems as well as making things easy to use.
