--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div>
            <h1 class="about-heading">About Me</h1>
           </div> 
-          <img src="https://i.ibb.co/pwc2mcY/1686731682247.jpg"><img/>
+          <img src="https://i.ibb.co/pwc2mcY/1686731682247.jpg">
           <p>
             I am 20 year old, a final year Computer Science Engineering student.
             I really enjoy solving problems as well as making things easy to use.
