--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           </div> 
           <img src="https://i.ibb.co/pwc2mcY/1686731682247.jpg">
           <p>
-            I am 20 year old, a final year Computer Science Engineering student.
-            I really enjoy solving problems as well as making things easy to use.
+            I am 21 year old, a Computer Science Engineering graduate(2020 - 2024).
+            I love designing clean and asthetic web pages !! 
           </p>
           <div class="work-arrow">
             <p>
@@ -128,10 +128,10 @@
             <i class="fab fa-python"></i>
             <h2>Diabetes Prediction</h2>
             <p>build using python</p>
-            <button><a href="#" target="blank">View source <i
+            <button><a href="https://github.com/srikar20031/OIBSIP" target="blank">View source <i
               class="fas fa-external-link-alt"></i></a>
             </button>
-            <button><a href="" target="blank">Try it Live <i
+            <button><a href="https://github.com/srikar20031/OIBSIP" target="blank">Try it Live <i
               class="fas fa-external-link-alt"></i></a>
           </button>
           </div>
