--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                     <div class="progress-line"><span class="java"></span></div>
                     <div class="bar">
                       <div class="info">
-                        <span>PYTHON</span>
+                        <span>ORACLERDMS</span>
                       </div>
-                      <div class="progress-line"><span class="python"></span></div>
+                      <div class="progress-line"><span class="oracleRDMS"></span></div>
                       <div class="bar">
                         <div class="info">
                           <span>C Programming</span>
