--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="proj1-details">
             <i class="fab fa-python"></i>
             <h2>Diabetes Prediction</h2>
-            <p>build using python</p>
+            <p>built using python</p>
             <button><a href="https://github.com/srikar20031/OIBSIP" target="blank">View source <i
               class="fas fa-external-link-alt"></i></a>
             </button>
@@ -142,7 +142,7 @@
           <div class="proj2-details">
             <i class="fab fa-java"></i>
             <h2>atm interface</h2>
-            <p>Build using java</p>
+            <p>Built using java</p>
             <button><a href="https://github.com/srikar20031/OIBSIP/tree/main/oasisintern" target="blank">View source <i
               class="fas fa-external-link-alt"></i></a>
             </button>
